--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,14 @@ file(
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Executable aka binary output
-add_executable(${OutputExecutable} ${SOURCE_CXX_FILES})
+add_executable(${OutputExecutable} # ${SOURCE_CXX_FILES}
+        src/AssetManager.cpp
+        src/olcPixelGameEngine.cpp
+        src/olcSoundWaveEngine.cpp
+
+        src/main.cpp
+        src/maze.cpp
+)
 
 ######################################################################
 # MacOS
