--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -302,6 +302,7 @@ if (EMSCRIPTEN)
             -sUSE_LIBPNG=1
             -sUSE_SDL_MIXER=2          # thanks for the s, cstd
             -sLLD_REPORT_UNDEFINED
+            -sFETCH
             --preload-file ${SOURCE_DATA_DIR}@assets)
     else()
         target_link_options(
@@ -312,6 +313,7 @@ if (EMSCRIPTEN)
             -sMIN_WEBGL_VERSION=2
             -sUSE_LIBPNG=1
             -sUSE_SDL_MIXER=2          # thanks for the s, cstd
+            -sFETCH
             -sLLD_REPORT_UNDEFINED)
     endif()
 
